--- a/Project_3.Rmd
+++ b/Project_3.Rmd
@@ -2,9 +2,6 @@
 title: 'ST 558 Project 3: `r params$rep_title` Analysis Report'
 author: "Suyog Dharmadhikari; Bennett McAuley"
 date: "2022-11-02"
-output: 
-  html_document:
-    toc: true
 params:
   channel: NULL
   rep_title: ''
@@ -80,8 +77,9 @@ So, we read in the data, perform the filter, and convert `is_weekend` into a bin
 
 ```{r read data}
 news <- read_csv("OnlineNewsPopularity.csv")
+
 fltr <- paste0("data_channel_is_", params$channel)
-# fltr <- "data_channel_is_tech"
+
 news.tbl <- news %>% filter(get(fltr) == 1) %>% 
   select(all_of(news.vars), shares) %>%
   mutate(is_weekend = as.factor(is_weekend))
@@ -117,21 +115,20 @@ c <- news.tbl %>%
 
 round(cor(c),2)
 ```
-The new variable **popularity** is set up so that news is considered `popular` if it receives more shares than the median shares, else it is considered `unpopular`.`table()` gives details about **count** of popular and unpopular news.
-```{r tablePopCount, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
 
-  news.tbl$popularity <- ifelse(news.tbl$shares < mean(news.tbl$shares),
-  "Unpopular", "Popular"
-)
+The new variable **popularity** is set up so that news is considered `popular` if it receives more shares than the median shares. Otherwise, it is considered `unpopular`.`table()` gives details about **count** of popular and unpopular news.
+
+```{r tablePopCount}
+news.tbl$popularity <- ifelse(news.tbl$shares < mean(news.tbl$shares),
+                              "Unpopular", "Popular")
 
 table(news.tbl$popularity)
-  
 ```
+
 The contingency table below depicts the relationship between the **popularity** of a news channel and whether or not it was **published on the weekend**. It informs us whether or not popular news was published over the weekend. Whether or not unpopular news was published over the weekend.
-```{r conTable, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
 
-   table(news.tbl$popularity,news.tbl$is_weekend)
-
+```{r conTable}
+table(news.tbl$popularity,news.tbl$is_weekend)
 ```
 
 ### Plots
@@ -177,7 +174,8 @@ plt <- news.tbl %>% pivot_longer(cols = starts_with("weekday_is_"),
 
 #Reordering days
 plt$day <- factor(plt$day,
-    levels = c("monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"))
+    levels = c("monday", "tuesday", "wednesday", "thursday",
+               "friday", "saturday", "sunday"))
 
 
 plt <- plt %>%
@@ -197,14 +195,12 @@ p + geom_col() +
        subtitle = paste("channel = ", params$channel),
        x = "Day",
        y = '')
-
 ```
 
-The code chunk below, tells us about the number of shares of a particular published news with number of images in the published news.It also tells us about the popularity of the news published with images. 
+The code chunk below, tells us about the number of shares of a particular published news with number of images in the published news. It also tells us about the popularity of the news published with images. 
 
-```{r barPlot, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
-
-  ggplot(news.tbl, aes(fill= popularity, y=shares, x=num_imgs)) +
+```{r barPlot}
+ggplot(news.tbl, aes(fill= popularity, y=shares, x=num_imgs)) +
   geom_bar(position='dodge', stat='identity',  width = 0.98) +
   ggtitle('Relation between number of images and shares') +
   xlab('Number of images in the news published') +
@@ -214,22 +210,21 @@ The code chunk below, tells us about the number of shares of a particular publis
 
 Correlation plots are used to find out the **correlation** between two variables in the given data set. In the code chunk below, we have used `ggcorrplt()` to plot the correlation between all the variables in the data set and identify the most **correlated variables**. A **violet** color circle shows there is **negative** correlation between the two respective variables and a **dark orange** color is **positive** correlation between two variables. 
 
-```{r corrPlot, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
-   
-    corr <- cor(select_if(news.tbl, is.numeric))
-    ggcorrplot(corr, 
-                method = "circle",
-                type = "lower",
-                outline.color = "black",
-                 lab_size = 6)
+```{r corrPlot}
+corr <- cor(select_if(news.tbl, is.numeric))
 
+ggcorrplot(corr,
+           method = "circle",
+           type = "lower",
+           outline.color = "black",
+           lab_size = 6)
 ```
 
 In the code chunk a scatter plot with a trend line. The number of words in the content is on the x-axis and the number of shares on the y-axis. If the data points and trend line show an upward trend, then articles with more words tend to have more number of shares. If there is a downward trend, then articles with more words tend to have a smaller number of shares.
 
-```{r scattPlot, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
+```{r scattPlot}
    
-  ggplot(news.tbl, aes(y=shares, x=n_tokens_content)) + 
+ggplot(news.tbl, aes(y=shares, x=n_tokens_content)) + 
     geom_point(aes(color=popularity)) +
     geom_smooth() + 
     ylim(0, 100000)
@@ -248,9 +243,17 @@ test <- news.tbl[-i,]
 
 ### Linear Regression
 
-The linear regression model is fit using variables chosen from forward stepwise selection.The leaps library's `regsubsets()` function performs best subset selection by identifying the best model with a given number of predictors, where best is quantified using **RSS**. The syntax is **identical** to that of `lm()`. The summary() command returns the best set of variables for each model size. In the code chunk below, we find the best predictors subset, then **r^2** value is used to determine the number of predictors that can give **best** model results. Then we create a formula that can be used to train the model by using `as.formula()` and `paste0()` in R.
+Linear regression is a statistical technique that aims to demonstrate a relationship between variables. A dependent variable's nature and degree of connection with a group of independent variables are assessed using linear regression. Symbolically:
+$$Y_i = \beta_0 + \beta_1 x_i + \epsilon_i$$
+where $Y_i$ is the dependent variable/response value, $\beta_0$ is the intercept, and $\beta_1$ is the slope coefficient for observation value $x_i$
 
-```{r regressionFormula1, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
+We can make predictions of `shares` using linear regression models.
+
+#### Model 1
+
+The linear regression model is fit using variables chosen from forward stepwise selection. The leaps library's `regsubsets()` function performs best subset selection by identifying the best model with a given number of predictors, where best is quantified using $RSS$. The syntax is identical to that of `lm()`. The summary() command returns the best set of variables for each model size. In the code chunk below, we find the best predictors subset, then $R^2$ value is used to determine the number of predictors that can give best model results. Then we create a formula that can be used to train the model by using `as.formula()` and `paste0()`.
+
+```{r regressionFormula1}
 fwdVars <- regsubsets(shares ~ ., train, method = "forward")
 
 fwdSumm <- summary(fwdVars)
@@ -269,15 +272,12 @@ modelFormula
 
 ```
 
-A statistical technique that aims to demonstrate a link between variables is **linear regression**. A dependent variable's nature and degree of connection with a group of independent variables are assessed using linear regression. We can make predictions of shares using linear regression models.
+In the code chunk below, firstly we have converted categorical variables into numerical variables using `dummyVars()`. `gsub()` is used to rename the column names in order to match with the column names generated by `regsubsets()` in the function above. The `caret` package was used to train a linear regression model by using the best predictors obtained from `regsubsets()`. We have standardized the model using `center and scale`. Cross validation is used to avoid over fitting and add generalization in our model. 
 
-In the code chunk below, firstly we have converted categorical variables into numerical variables using `dummyVars()`. `gsub()` is used to **rename** the column names in order to match with the column names generated by `regsubsets()` in the function above. **Caret** package was used to train a linear regression model by using the best predictors obtained from **`regsubsets()`**. We have **standardized** the model using `center and scale`. **Cross validation** is used to avoid over fitting and add generalization in our model. 
-
-```{r regressModel, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
-
-set.seed(400)
+```{r regressModel}
 # convert categorical variables into numeric variables i.e one hot encoding
 dummies <- dummyVars(shares ~ is_weekend+popularity, data = train)
+
 trainDF <- as_tibble(predict(dummies, newdata = train)) %>%
     bind_cols(select(train,-is_weekend,-popularity))
 
@@ -295,9 +295,12 @@ summary(forwardFit)
 
 ```
 
-```{r regressModelPredictFwd, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
+Now we use the model to make predictions:
+
+```{r regressModelPredictFwd}
 # convert categorical variables into numeric variables i.e one hot encoding
 dummies <- dummyVars(shares ~ is_weekend+popularity, data = test)
+
 testDF <- as_tibble(predict(dummies, newdata = test)) %>%
     bind_cols(select(test,-is_weekend,-popularity))
 
@@ -309,7 +312,9 @@ testDF <- as_tibble(predict(dummies, newdata = test)) %>%
   
 ```
 
-This second linear regression model is fit using variables chosen from backwards stepwise selection.
+#### Model 2
+
+This second linear regression model is fit using variables chosen from _backwards_ stepwise selection.
 
 The `regsubsets` function is called, and the summary is returned to grab the models of $n$ terms that have the optimal values for $R^2$, Mallows' Cp, and BIC. As performance will vary, the mode value between the three is chosen as the 'best'.
 
@@ -333,42 +338,43 @@ terms <- coef(backVars, M)
 terms
 ```
 
-Now, the model can be trained. The coefficient names are grabbed from the backwards selection, and input as a subset of the training data. The variables are scaled to account for the vastly different magnitudes between them, and to prevent any extreme coefficient values because of this.
+Now, the model can be trained. The coefficient names are grabbed from the backwards selection, and input as a subset of the training data. The variables are standardized to account for the vastly different magnitudes between them, and to prevent any extreme coefficient values because of this.
 
 ```{r reg train}
 prd <- names(terms)
+
+#Assuming these terms appear in the model, but just a warning otherwise
 prd <- replace(prd, prd %in% c('(Intercept)', 'is_weekend1'), c('shares', 'is_weekend'))
 
 BackwardFit <- train(shares ~ .,
                     data = train[,prd],
                     method = "lm",
                     metric = "Rsquared",
-                    preProcess = c("scale"),
+                    preProcess = c("scale", "center"),
                     trControl = trainControl(method = "cv", number = 10))
 
 summary(BackwardFit)
 
 ```
 
-```{r regressModelPredictBck, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
-# convert categorical variables into numeric variables i.e one hot encoding
+The model is then tested against the testing data:
 
-  predLRBck <- predict(BackwardFit,newdata = test)
+```{r regressModelPredictBck}
+
+predLRBck <- predict(BackwardFit, newdata = test)
   
-  predResultsBck <- postResample(predLRBck,obs = test$shares)
-  
-  predResultsBck
+predResultsBck <- postResample(predLRBck, obs = test$shares)
+predResultsBck
   
 ```
 
 ### Random Forest
 
-**Random forest** uses same idea as bagging tree models. That means it is a bootstrap aggregation method, but only difference is that in random forest we **randomly select subset of predictors** instead of using all the predictors. This is because, if a really strong predictor exists, **every** bootstrap tree will probably use it for the **first** split. This will result in making bagged trees predictions more **correlated** and **variance** will be **large** in aggregation. Hence, in random forest we avoid this limitation by using a random subset of predictors for each bootstrap sample/tree fit. 
-In the code chunk below, `Caret` package was used to train the rf forest model and the evaluation metric used for the fit is `Rsquared`. We have tuned the model by using tuning parameter `mtry` ad used **5 folds cross validation** for finding best fit.
+Random forest uses the same idea as bagging tree models. It is a bootstrap aggregation method, but the difference is that random forests _randomly_ select a subset of predictors instead of using all the predictors. This is because if a really strong predictor exists, _every_ bootstrap tree will probably use it for the first split. This will result in making bagged trees predictions more correlated, and variance will be large in aggregation. Hence, in random forest we avoid this limitation by using a random subset of predictors for each bootstrap sample/tree fit.
 
-```{r randomForestModel, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
+In the code chunk below, `caret` package was used to train the rf forest model and the evaluation metric used for the fit is `Rsquared`. We have tuned the model by using tuning parameter `mtry` ad used **5 folds cross validation** for finding best fit.
 
-set.seed(123)
+```{r randomForestModel}
 
 #5 folds cross validation
 control <- trainControl(method='cv', 
@@ -388,19 +394,20 @@ varImp(rfFit$finalModel) %>% arrange(desc(Overall))
 
 ```
 
-```{r rfModelPredict, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
+```{r rfModelPredict}
 # convert categorical variables into numeric variables i.e one hot encoding
 dummies <- dummyVars(shares ~ is_weekend+popularity, data = test)
+
 testDF <- as_tibble(predict(dummies, newdata = test)) %>%
     bind_cols(select(test,-is_weekend,-popularity))
 
-  predRF <- predict(rfFit,newdata = testDF)
+predRF <- predict(rfFit,newdata = testDF)
   
-  predResultsRF <- postResample(predRF,obs = testDF$shares)
-  
-  predResultsRF
+predResultsRF <- postResample(predRF,obs = testDF$shares)
+predResultsRF
   
 ```
+
 ### Boosted Tree Model
 
 Boosting centers around the idea of sequential learning--taking information from preceding iterations as a basis for calculating the current iteration. Boosted trees are ensemble tree models consisting of a group of trees that are built in sequence, including errors from previous trees for predictions.
@@ -438,27 +445,32 @@ Since coefficients aren't interpretable for boosted trees, the calculation of va
 varImp(boostFit$finalModel) %>% arrange(desc(Overall))
 ```
 
-```{r boostModelPredict, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
-# convert categorical variables into numeric variables i.e one hot encoding
-  predBoost <- predict(boostFit,newdata = test)
+Now, the results of applying the boosted tree to the test data:
+
+```{r boostModelPredict}
+predBoost <- predict(boostFit,newdata = test)
   
-  predResultsBoost <- postResample(predBoost,obs = test$shares)
-  
-  predResultsBoost
-  
+predResultsBoost <- postResample(predBoost,obs = test$shares)
+predResultsBoost
+
 ```
 
-```{r modelComparison, echo=TRUE, eval=TRUE,warning=FALSE,message=FALSE}
+## Model Comparison
 
-rmseModels <- c(predResultsFwd[[1]],predResultsBck[[1]],predResultsRF[[1]],predResultsBoost[[1]])
+The metric results of each model are returned in the table below. The metric that they are "judged" against is RMSE, and the model with the minimum value is the "winner".
 
-modelName <- c("Linear regression with forward selection","Linear regression with backward selection","Random forest","Boosted tree")
+```{r modelComparison}
+rmseModels <- c(predResultsFwd[[1]],predResultsBck[[1]],
+                predResultsRF[[1]],predResultsBoost[[1]])
 
-resultsDF <- data.frame(modelName,rmseModels)
+modelName <- c("Linear Regression (Forward Var. Selection)", "Linear Regression (Backward Var. Selection)",
+               "Random foresF", "Boosted Tree")
+
+resultsDF <- tibble(modelName, rmseModels)
+resultsDF
 
 
 bestModelName <- filter(resultsDF,rmseModels == min(rmseModels))[[1]]
 
-paste0("The best model for the selected data channel is : ", bestModelName)
-
+paste0("The best model for the ", params$channel, " channel is: ", bestModelName)
 ```
